--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
     <div class="socialright container-fluid px-o">
       <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
-      <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+      <a ><i class="fas fa-clock fa-2x"></i></a>
+      <p>Non-stop</p>
     </div>
+
 
   </div>
 
@@ -51,30 +53,30 @@
 
     <div class="headerleft">
       <a href=""><img src="logo.png" height="100px" alt=""></a>
-      <p class="h1">Save & Smile</p>
+    <a href="">  <p class="h1"><span id="save">Save </span> & <span id="smile">Smile</span></p>  </a>
     </div>
 
     <div class="headerright">
-      <ul>
-        <a href="">
-          <li>Acasă</li>
-        </a>
-        <a href="">
-          <li>Voluntariat</li>
-        </a>
-        <a href="">
-          <li>Donează</li>
-        </a>
-        <a href="">
-          <li>Spre adoptie</li>
-        </a>
-        <a href="">
-          <li>Despre noi</li>
-        </a>
-        <a href="">
-          <li>Contact</li>
-        </a>
-      </ul>
+          <ul>
+            <a href="index.html">
+              <li  id="active">Acasă</li>
+            </a>
+            <a href="voluntar.html">
+              <li>Voluntariat</li>
+            </a>
+            <a href="doneaza.html">
+              <li>Donează</li>
+            </a>
+            <a href="galerie.html">
+              <li>Spre adopție</li>
+            </a>
+            <a href="noroc.html">
+              <li>Cei norocoși</li>
+            </a>
+            <a href="echipa.html">
+              <li>Echipa</li>
+            </a>
+          </ul>
     </div>
 
 
@@ -108,25 +110,25 @@
       <h1 class="display-3">Adoptă</h1>
       <img class="img-fluid" src="love.jpg" alt="">
       <p>Lorem ipsum orem ipsum orem ipsum orem ipsum orem ipsum orem ipsum </p>
-      <button type="button" name="button">Mai mult...</button>
+    <a href="galerie.html"> <button type="button" name="button">Adoptă!</button></a>
     </div>
     <div class="column1234">
       <h1 class="display-3">Foster</h1>
       <img class="img-fluid" src="love5.jpg" alt="">
       <p>Lorem ipsum orem ipsum orem ipsum orem ipsum orem ipsum orem ipsum </p>
-      <button type="button" name="button">Mai mult...</button>
+  <a href="voluntar.html"> <button type="button" name="button">Ajută!</button> </a>
     </div>
     <div class="column1234">
       <h1 class="display-3">Donează</h1>
       <img class="img-fluid" src="love2.jpg" alt="">
       <p>Lorem ipsum orem ipsum orem ipsum orem ipsum orem ipsum orem ipsum </p>
-      <button type="button" name="button">Mai mult...</button>
+    <a href="doneaza.html"> <button type="button" name="button">Donează!</button> </a>
     </div>
     <div class="column1234">
       <h1 class="display-3">Voluntariat</h1>
       <img class="img-fluid" src="love4.jpg" alt="">
       <p>Lorem ipsum orem ipsum orem ipsum orem ipsum orem ipsum orem ipsum </p>
-      <button type="button" name="button">Mai mult...</button>
+    <a href="voluntar.html"> <button type="button" name="button">Aplică!</button> </a>
     </div>
 
   </div>
@@ -705,7 +707,7 @@
   <div class="container-fluid px-0 galerie">
 
     <div class="galerietext">
-      <h1 class="display-4">Esti pregatit pentru un nou prieten?</h1>
+      <h1 class="display-4">Ești pregătit pentru un nou prieten?</h1>
     </div>
 
     <div class="fusion"></div>
@@ -713,29 +715,29 @@
     <div class="galerierows">
       <div class="row123">
         <img class="img-fluid" src="love3.jpg" alt="">
-        <h1>Bella</h1>
+        <a href="galerie.html"><h1>Bella</h1></a>
         <p>Bella a ajuns la noi acum 2 saptamani si cauta o casa nouaa ajuns la noi acum 2 saptamani si cauta o casa noua</p>
       </div>
       <div class="row123">
         <img class="img-fluid" src="love3.jpg" alt="">
-        <h1>Bella</h1>
+        <a href="galerie.html"><h1>Bella</h1></a>
         <p>Bella a ajuns la noi acum 2 saptamani si cauta o casa nouaa ajuns la noi acum 2 saptamani si cauta o casa noua</p>
       </div>
       <div class="row123">
         <img class="img-fluid" src="love3.jpg" alt="">
-        <h1>Bella</h1>
+        <a href="galerie.html"><h1>Bella</h1></a>
         <p>Bella a ajuns la noi acum 2 saptamani si cauta o casa nouaa ajuns la noi acum 2 saptamani si cauta o casa noua</p>
       </div>
       <div class="row123">
         <img class="img-fluid" src="love3.jpg" alt="">
-        <h1>Bella</h1>
+        <a href="galerie.html"><h1>Bella</h1></a>
         <p>Bella a ajuns la noi acum 2 saptamani si cauta o casa nouaa ajuns la noi acum 2 saptamani si cauta o casa noua</p>
       </div>
     </div>
 
     <div class="textjosgale">
-      <a href="">
-        <p>Vezi toate animalele valabile pentru adoptie >> </p>
+      <a href="galerie.html">
+        <p>Vezi toate animalele valabile pentru adopție >> </p>
       </a>
     </div>
 
@@ -754,10 +756,10 @@
 
     <div class="asociatia">
       <p>
-        <span>ASOCIATIA SAVE AND SMILE</span> - LEI: <br>
+        <span>ASOCIAȚIA SAVE AND SMILE</span> - LEI: <br>
         RO87BTRLRONCRT0499182401 </p>
       <p>
-        <span>ASOCIATIA SAVE AND SMILE</span> - EURO: <br>
+        <span>ASOCIAȚIA SAVE AND SMILE</span> - EURO: <br>
         RO37BTRLEURCRT0499182401 </p>
       <p>
         <span>Paypal </span>: asoc.saveandsmile@gmail.com <br> </p>
@@ -784,7 +786,7 @@
   <!-- Footer -->
   <div class="container-fluid px-0 footerz">
 
-    <p>Radu Catalin Web Design &copy; 2020</p>
+    <p>Radu Cătălin Web Design &copy; 2020</p>
 
   </div>
   <!--   -->
